# call_me_maybe_code

./: .flake8  Makefile  README.md  pyproject.toml  test.c
src/: __main__.py  m1_args_parse.py  m1_args_parser.py  m1_parsing.py  m2_json_parser.py  m2_jsons_parse.py  m2_sys_prompt.py  m3_const_decod.py  m3_prompt_to_ai.py  m3_sys_prompt.py  m4_cons_decoding.py  m4_const_decod.py
